--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="snippet_list_frequency_label">Frequency: %1$s</string>
     <string name="add_new_list">Add new list</string>
     <string name="add_new_snippet">Add new snippet</string>
+    <string name="add_multiple_snippets">Add multiple snippets</string>
     <string name="no_snippets_placeholder">No snippets yet</string>
     <string name="next_notification_due">Next snippet will be shown in %1$s</string>
     <string name="return_to_lists">Back to lists</string>
@@ -19,6 +20,8 @@
     <string name="screen_title_details">Details</string>
     <string name="reminders_enabled_label">Reminders enabled</string>
     <string name="notification_frequency_label">Notification every %1$d %2$s</string>
+    <string name="show_add_snippet_options">Show add snippet options</string>
+    <string name="hide_add_snippet_options">Hide add snippet options</string>
     <plurals name="frequency_seconds_plurals">
         <item quantity="one">%d second</item>
         <item quantity="other">%d seconds</item>
