--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,8 @@
     <string name="notification_frequency_label">Notification every %1$d %2$s</string>
     <string name="show_add_snippet_options">Show add snippet options</string>
     <string name="hide_add_snippet_options">Hide add snippet options</string>
+    <string name="snippet_count">Snippets: %d</string>
+    <string name="no_snippets_in_list">No snippets in this list</string>
     <plurals name="frequency_seconds_plurals">
         <item quantity="one">%d second</item>
         <item quantity="other">%d seconds</item>
